--- a/stonecloud-web/pom.xml
+++ b/stonecloud-web/pom.xml
@@ -81,6 +81,12 @@
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.2.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+<dependency>
+    <groupId>com.alibaba</groupId>
+    <artifactId>druid</artifactId>
+    <version>1.0.18</version>
+</dependency>
 		
 	</dependencies>
 	<build>
