--- a/stonecloud-web/pom.xml
+++ b/stonecloud-web/pom.xml
@@ -82,12 +82,19 @@
 			<version>1.2.2</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
-<dependency>
-    <groupId>com.alibaba</groupId>
-    <artifactId>druid</artifactId>
-    <version>1.0.18</version>
-</dependency>
-		
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.0.18</version>
+		</dependency>
+		<!-- 文件上传 https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<finalName>stonecloud</finalName>
