--- a/stonecloud-web/pom.xml
+++ b/stonecloud-web/pom.xml
@@ -64,11 +64,10 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- GSON -->
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.2.4</version>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.33</version>
 		</dependency>
 		<!-- MYBATIS -->
 		<dependency>
