--- a/stonecloud-web/pom.xml
+++ b/stonecloud-web/pom.xml
@@ -70,6 +70,14 @@
 			<artifactId>gson</artifactId>
 			<version>2.2.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>2.7.4</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<finalName>stonecloud</finalName>
