--- a/stonecloud-web/src/main/resources/config.properties
+++ b/stonecloud-web/src/main/resources/config.properties
@@ -7,4 +7,12 @@ jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=root
 
-
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.show_sql=false
+hibernate.format_sql=false
+hibernate.hbm2ddl.auto=update
+hibernate.jdbc.batch_size=80
+hibernate.autoReconnect=true
+hibernate.transaction.auto_close_session=false
+hibernate.connection.release_mode=after_transaction
+hibernate.current_session_context_class=thread
