--- a/stonecloud-web/src/main/resources/config.properties
+++ b/stonecloud-web/src/main/resources/config.properties
@@ -7,7 +7,7 @@ jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=root
 
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql=false
 hibernate.format_sql=false
 hibernate.hbm2ddl.auto=update
@@ -16,3 +16,6 @@ hibernate.autoReconnect=true
 hibernate.transaction.auto_close_session=false
 hibernate.connection.release_mode=after_transaction
 hibernate.current_session_context_class=thread
+hibernate.cache.use_query_cache=true
+hibernate.cache.use_second_level_cache=true
+hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
