--- a/stonecloud-web/src/main/resources/log4j.properties
+++ b/stonecloud-web/src/main/resources/log4j.properties
@@ -41,9 +41,9 @@ log4j.appender.errorFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.errorFile.layout.ConversionPattern=[%-5p] %d %l: %m %x %n
 
 
-
-
-
+#log4j.logger.org.hibernate.type=trace
+#log4j.logger.org.hibernate.SQL=trace
+#log4j.logger.org.hibernate.type.descriptor.sql.BasicBinder=INFO
 
 
 
