--- a/stonecloud-web/src/main/resources/config.properties
+++ b/stonecloud-web/src/main/resources/config.properties
@@ -7,20 +7,20 @@ jdbc.url=jdbc:mysql://localhost:3306/stonecloud?useUnicode=true&characterEncodin
 jdbc.username=root
 jdbc.password=root
 
-filters: stat
-maxActive: 20
-initialSize: 1
-maxWait: 60000
-minIdle: 10
-maxIdle: 15
-timeBetweenEvictionRunsMillis: 60000
-minEvictableIdleTimeMillis: 300000
-validationQuery: SELECT 'x'
-testWhileIdle: true
-testOnBorrow: false
-testOnReturn: false
-maxOpenPreparedStatements: 20
-removeAbandoned: true
-removeAbandonedTimeout: 1800
-logAbandoned: true
+filters=stat
+maxActive=20
+initialSize=1
+maxWait=60000
+minIdle=10
+maxIdle=15
+timeBetweenEvictionRunsMillis=60000
+minEvictableIdleTimeMillis=300000
+validationQuery=SELECT 'x'
+testWhileIdle=true
+testOnBorrow=false
+testOnReturn=false
+maxOpenPreparedStatements=20
+removeAbandoned=true
+removeAbandonedTimeout=1800
+logAbandoned=true
 
