--- a/stonecloud-web/pom.xml
+++ b/stonecloud-web/pom.xml
@@ -43,6 +43,19 @@
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		<!-- aop -->
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.8.13</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.8.13</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -70,23 +83,16 @@
 			<version>1.2.33</version>
 		</dependency>
 		<!-- MYBATIS -->
-		<!-- <dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis</artifactId>
-			<version>3.2.8</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis-spring</artifactId>
-			<version>1.2.2</version>
-		</dependency> -->
-		
+		<!-- <dependency> <groupId>org.mybatis</groupId> <artifactId>mybatis</artifactId> 
+			<version>3.2.8</version> </dependency> <dependency> <groupId>org.mybatis</groupId> 
+			<artifactId>mybatis-spring</artifactId> <version>1.2.2</version> </dependency> -->
+
 		<!-- mybatisplus -->
 		<!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus -->
 		<dependency>
-		    <groupId>com.baomidou</groupId>
-		    <artifactId>mybatis-plus</artifactId>
-		    <version>2.1.9</version>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus</artifactId>
+			<version>2.1.9</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
 		<dependency>
@@ -141,19 +147,10 @@
 					<uriEncoding>utf-8</uriEncoding>
 				</configuration>
 			</plugin>
-			<!-- <plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.4.6.v20170531</version>
-				<configuration>
-					<httpConnector>
-						<port>9080</port>
-					</httpConnector>
-					<webApp>
-						<contextPath>/stonecloud</contextPath>
-					</webApp>
-				</configuration>
-			</plugin> -->
+			<!-- <plugin> <groupId>org.eclipse.jetty</groupId> <artifactId>jetty-maven-plugin</artifactId> 
+				<version>9.4.6.v20170531</version> <configuration> <httpConnector> <port>9080</port> 
+				</httpConnector> <webApp> <contextPath>/stonecloud</contextPath> </webApp> 
+				</configuration> </plugin> -->
 		</plugins>
 	</build>
 </project>
