--- a/stonecloud-web/pom.xml
+++ b/stonecloud-web/pom.xml
@@ -13,6 +13,7 @@
 		<log4j.version>1.2.12</log4j.version>
 		<servlet.version>3.0.1</servlet.version>
 		<aspectj.version>1.8.9</aspectj.version>
+		<ignite.version>2.4.0</ignite.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -100,12 +101,13 @@
 			<artifactId>druid</artifactId>
 			<version>1.0.18</version>
 		</dependency>
-		<!-- 文件上传 https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<!-- 文件上传  -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
 		</dependency>
+		<!-- httpclient -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
@@ -116,12 +118,29 @@
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpmime</artifactId>
 			<version>4.3.6</version>
 		</dependency>
+		<!-- apache ignite -->
+		<dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-core</artifactId>
+            <version>${ignite.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-spring</artifactId>
+            <version>${ignite.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-indexing</artifactId>
+            <version>${ignite.version}</version>
+        </dependency>
 
 
 	</dependencies>
