--- a/stonecloud-web/src/main/webapp/WEB-INF/web.xml
+++ b/stonecloud-web/src/main/webapp/WEB-INF/web.xml
@@ -26,10 +26,10 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	<listener>
-		<listener-class>com.stone.webapp.listener.WebServerListener</listener-class>
+		<listener-class>com.stone.webapp.config.listener.WebServerListener</listener-class>
 	</listener>
 	<listener>
-		<listener-class>com.stone.webapp.listener.PrivateHttpSessionListener</listener-class>
+		<listener-class>com.stone.webapp.config.listener.PrivateHttpSessionListener</listener-class>
 	</listener>
 	<!-- servlet.DispatcherServlet -->
 	<servlet>
@@ -59,14 +59,14 @@
 		</filter> <filter-mapping> <filter-name>IgniteWebSessionsFilter</filter-name> 
 		<url-pattern>/*</url-pattern> </filter-mapping> -->
 
-	<filter>
+	<!-- <filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</filter-mapping> -->
 	<!-- spring字符集过滤器 -->
 	<filter>
 		<filter-name>characterEncodingFilter</filter-name>
