--- a/stonecloud-web/pom.xml
+++ b/stonecloud-web/pom.xml
@@ -173,6 +173,18 @@
 			<version>${ignite.version}</version>
 		</dependency>
 
+		<!-- 返回对象自动转json -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.9.5</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.9.5</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
@@ -193,7 +205,7 @@
 				<version>2.2</version>
 				<configuration>
 					<path>/stonecloud</path>
-					<port>9080</port>
+					<port>18080</port>
 					<uriEncoding>utf-8</uriEncoding>
 				</configuration>
 			</plugin>
