--- a/stonecloud-web/pom.xml
+++ b/stonecloud-web/pom.xml
@@ -84,11 +84,28 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.25</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
+		</dependency>  
+		<dependency>  
+		    <groupId>org.slf4j</groupId>  
+		    <artifactId>slf4j-simple</artifactId>  
+		    <version>1.7.25</version>  
+		</dependency>-->
+		<dependency>  
+	        <groupId>org.slf4j</groupId>  
+	        <artifactId>slf4j-api</artifactId>  
+	        <version>1.7.25</version>  
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-log4j12</artifactId>
+		    <version>1.7.25</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
