--- a/stonecloud-web/pom.xml
+++ b/stonecloud-web/pom.xml
@@ -10,7 +10,7 @@
 
 	<properties>
 		<spring.version>4.3.3.RELEASE</spring.version>
-		<log4j.version>1.2.12</log4j.version>
+		<!-- <log4j.version>1.2.12</log4j.version> -->
 		<servlet.version>3.0.1</servlet.version>
 		<aspectj.version>1.8.9</aspectj.version>
 		<ignite.version>2.5.0</ignite.version>
