--- a/stonecloud-web/pom.xml
+++ b/stonecloud-web/pom.xml
@@ -205,6 +205,12 @@
 
 	</dependencies>
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<finalName>stonecloud</finalName>
 		<plugins>
 			<plugin>
@@ -232,4 +238,25 @@
 				</configuration> </plugin> -->
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<profileActive>dev</profileActive>
+				<properties.path>/config/dev</properties.path>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>test</id>
+			<properties>
+				<profileActive>dev</profileActive>
+				<properties.path>/config/test</properties.path>
+			</properties>
+		</profile>
+		
+	</profiles>
 </project>
