--- a/stonecloud-web/src/main/webapp/WEB-INF/web.xml
+++ b/stonecloud-web/src/main/webapp/WEB-INF/web.xml
@@ -12,14 +12,14 @@
 
 	<context-param>
 		<param-name>IgniteConfigurationFilePath</param-name>
-		<param-value>jdbc-config.xml </param-value>
+		<param-value>../config/ignite/jdbc-config.xml</param-value>
 	</context-param>
 	<context-param>
 		<param-name>IgniteWebSessionsCacheName</param-name>
-		<param-value>partitioned</param-value>
+		<param-value>stoneCache</param-value>
 	</context-param>
 
-	
+
 	<!-- ContextLoaderListener -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -30,11 +30,11 @@
 	<listener>
 		<listener-class>com.stone.webapp.config.listener.PrivateHttpSessionListener</listener-class>
 	</listener>
-	
+
 	<listener>
 		<listener-class>org.apache.ignite.startup.servlet.ServletContextListenerStartup</listener-class>
 	</listener>
-	
+
 	<!-- servlet.DispatcherServlet -->
 	<servlet>
 		<servlet-name>spring</servlet-name>
@@ -59,9 +59,14 @@
 		<url-pattern>/test</url-pattern>
 	</servlet-mapping>
 
-	<!-- <filter> <filter-name>IgniteWebSessionsFilter</filter-name> <filter-class>org.apache.ignite.cache.websession.WebSessionFilter</filter-class> 
-		</filter> <filter-mapping> <filter-name>IgniteWebSessionsFilter</filter-name> 
-		<url-pattern>/*</url-pattern> </filter-mapping> -->
+	<filter>
+		<filter-name>IgniteWebSessionsFilter</filter-name>
+		<filter-class>org.apache.ignite.cache.websession.WebSessionFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>IgniteWebSessionsFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<!-- <filter> <filter-name>springSecurityFilterChain</filter-name> <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class> 
 		</filter> <filter-mapping> <filter-name>springSecurityFilterChain</filter-name> 
