ignite 读取META-INF下的配置文件

--- a/stonecloud-web/pom.xml
+++ b/stonecloud-web/pom.xml
@@ -205,6 +205,9 @@
 
 	</dependencies>
 	<build>
+		<filters>
+	      <filter>src/main/resources/config/${profileActive}/ignite-config.properties</filter><!--基础文件-->
+	    </filters>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
