--- a/stonecloud-web/src/main/resources/config/dev/ignite-config.properties
+++ b/stonecloud-web/src/main/resources/config/dev/ignite-config.properties
@@ -1,7 +1,7 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8
-jdbc.username=root
-jdbc.password=root
+ignite.config.jdbc.driverClassName=com.mysql.jdbc.Driver
+ignite.config.jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8
+ignite.config.jdbc.username=root
+ignite.config.jdbc.password=root
 
-cacheName=stoneCache
-tableName=STONE_TABLE
+ignite.config.cacheName=stoneCache
+ignite.config.tableName=STONE_TABLE
